Add injected activity output when making QSPECT

--- a/doodle/documentation/SPECT2SUV.ipynb
+++ b/doodle/documentation/SPECT2SUV.ipynb
@@ -69,10 +69,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3a7b4268-5548-4100-8173-95eae051ec75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>injected_activity_MBq</th>\n",
+       "      <th>injection_datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7395.744895</td>\n",
+       "      <td>2022-06-16 09:18:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   injected_activity_MBq  injection_datetime\n",
+       "0            7395.744895 2022-06-16 09:18:00"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weight = 113.4\n",
     "height = 1.785\n",
@@ -87,14 +132,15 @@
     "activity_meter_scale_factor = 1\n",
     "\n",
     "\n",
-    "img.make_bqml_suv(weight=weight,height=height,injection_date=injection_date,pre_inj_activity=pre_inj_activity,pre_inj_time=pre_inj_time,post_inj_activity=post_inj_activity,post_inj_time=post_inj_time,injection_time=injection_time,activity_meter_scale_factor=activity_meter_scale_factor)\n",
-    "img.ds.save_as(output_path)"
+    "inj_df = img.make_bqml_suv(weight=weight,height=height,injection_date=injection_date,pre_inj_activity=pre_inj_activity,pre_inj_time=pre_inj_time,post_inj_activity=post_inj_activity,post_inj_time=post_inj_time,injection_time=injection_time,activity_meter_scale_factor=activity_meter_scale_factor)\n",
+    "img.ds.save_as(output_path)\n",
+    "inj_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2b744e-8def-48e2-9d2d-58a5aea58b8e",
+   "id": "c4cbee90-0ee5-4915-8a4b-fd875a69d804",
    "metadata": {},
    "outputs": [],
    "source": []
